--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_favorite"
+        android:title="@string/detail_menu_fav"
+        android:icon="@drawable/ic_favorite_border"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/menu_pin"
         android:title="@string/detail_menu_pin"
